# docs/swagger.yaml
@@ -1,6 +1,21 @@
-basePath: /
 definitions:
-  github_com_go-nunu_nunu-layout-advanced_internal_pkg_request.LoginRequest:
+  github_com_go-nunu_nunu-layout-advanced_api_v1.GetProfileResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.GetProfileResponseData'
+      message:
+        type: string
+    type: object
+  github_com_go-nunu_nunu-layout-advanced_api_v1.GetProfileResponseData:
+    properties:
+      nickname:
+        type: string
+      userId:
+        type: string
+    type: object
+  github_com_go-nunu_nunu-layout-advanced_api_v1.LoginRequest:
     properties:
       password:
         example: "123456"
@@ -12,7 +27,21 @@ definitions:
     - password
     - username
     type: object
-  github_com_go-nunu_nunu-layout-advanced_internal_pkg_request.RegisterRequest:
+  github_com_go-nunu_nunu-layout-advanced_api_v1.LoginResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.LoginResponseData'
+      message:
+        type: string
+    type: object
+  github_com_go-nunu_nunu-layout-advanced_api_v1.LoginResponseData:
+    properties:
+      accessToken:
+        type: string
+    type: object
+  github_com_go-nunu_nunu-layout-advanced_api_v1.RegisterRequest:
     properties:
       email:
         example: 1234@gmail.com
@@ -28,7 +57,7 @@ definitions:
     - password
     - username
     type: object
-  github_com_go-nunu_nunu-layout-advanced_internal_pkg_response.Response:
+  github_com_go-nunu_nunu-layout-advanced_api_v1.Response:
     properties:
       code:
         type: integer
@@ -60,14 +89,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_internal_pkg_request.LoginRequest'
+          $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_internal_pkg_response.Response'
+            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.LoginResponse'
       summary: 账号登录
       tags:
       - 用户模块
@@ -82,14 +111,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_internal_pkg_request.RegisterRequest'
+          $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.RegisterRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_internal_pkg_response.Response'
+            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.Response'
       summary: 用户注册
       tags:
       - 用户模块
@@ -103,7 +132,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_internal_pkg_response.Response'
+            $ref: '#/definitions/github_com_go-nunu_nunu-layout-advanced_api_v1.GetProfileResponse'
       security:
       - Bearer: []
       summary: 获取用户信息
