# internal/handler/user.go
@@ -2,9 +2,9 @@ package handler
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/go-nunu/nunu-layout-advanced/internal/pkg/request"
-	"github.com/go-nunu/nunu-layout-advanced/internal/pkg/response"
+	v1 "github.com/go-nunu/nunu-layout-advanced/api/v1"
 	"github.com/go-nunu/nunu-layout-advanced/internal/service"
+	"go.uber.org/zap"
 	"net/http"
 )
 
@@ -34,22 +34,23 @@ type userHandler struct {
 // @Tags 用户模块
 // @Accept json
 // @Produce json
-// @Param request body request.RegisterRequest true "params"
-// @Success 200 {object} response.Response
+// @Param request body v1.RegisterRequest true "params"
+// @Success 200 {object} v1.Response
 // @Router /register [post]
 func (h *userHandler) Register(ctx *gin.Context) {
-	req := new(request.RegisterRequest)
+	req := new(v1.RegisterRequest)
 	if err := ctx.ShouldBindJSON(req); err != nil {
-		response.HandleError(ctx, http.StatusBadRequest, response.ErrBadRequest, nil)
+		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
 		return
 	}
 
 	if err := h.userService.Register(ctx, req); err != nil {
-		response.HandleError(ctx, http.StatusBadRequest, response.ErrBadRequest, nil)
+		h.logger.WithContext(ctx).Error("userService.Register error", zap.Error(err))
+		v1.HandleError(ctx, http.StatusInternalServerError, err, nil)
 		return
 	}
 
-	response.HandleSuccess(ctx, nil)
+	v1.HandleSuccess(ctx, nil)
 }
 
 // Login godoc
@@ -59,24 +60,23 @@ func (h *userHandler) Register(ctx *gin.Context) {
 // @Tags 用户模块
 // @Accept json
 // @Produce json
-// @Param request body request.LoginRequest true "params"
-// @Success 200 {object} response.Response
+// @Param request body v1.LoginRequest true "params"
+// @Success 200 {object} v1.LoginResponse
 // @Router /login [post]
 func (h *userHandler) Login(ctx *gin.Context) {
-	var req request.LoginRequest
+	var req v1.LoginRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		response.HandleError(ctx, http.StatusBadRequest, response.ErrBadRequest, nil)
+		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
 		return
 	}
 
 	token, err := h.userService.Login(ctx, &req)
 	if err != nil {
-		response.HandleError(ctx, http.StatusUnauthorized, response.ErrUnauthorized, nil)
+		v1.HandleError(ctx, http.StatusUnauthorized, v1.ErrUnauthorized, nil)
 		return
 	}
-
-	response.HandleSuccess(ctx, gin.H{
-		"accessToken": token,
+	v1.HandleSuccess(ctx, v1.LoginResponseData{
+		AccessToken: token,
 	})
 }
 
@@ -88,37 +88,37 @@ func (h *userHandler) Login(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} response.Response
+// @Success 200 {object} v1.GetProfileResponse
 // @Router /user [get]
 func (h *userHandler) GetProfile(ctx *gin.Context) {
 	userId := GetUserIdFromCtx(ctx)
 	if userId == "" {
-		response.HandleError(ctx, http.StatusUnauthorized, response.ErrUnauthorized, nil)
+		v1.HandleError(ctx, http.StatusUnauthorized, v1.ErrUnauthorized, nil)
 		return
 	}
 
 	user, err := h.userService.GetProfile(ctx, userId)
 	if err != nil {
-		response.HandleError(ctx, http.StatusBadRequest, response.ErrBadRequest, nil)
+		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
 		return
 	}
 
-	response.HandleSuccess(ctx, user)
+	v1.HandleSuccess(ctx, user)
 }
 
 func (h *userHandler) UpdateProfile(ctx *gin.Context) {
 	userId := GetUserIdFromCtx(ctx)
 
-	var req request.UpdateProfileRequest
+	var req v1.UpdateProfileRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		response.HandleError(ctx, http.StatusBadRequest, response.ErrBadRequest, nil)
+		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
 		return
 	}
 
 	if err := h.userService.UpdateProfile(ctx, userId, &req); err != nil {
-		response.HandleError(ctx, http.StatusInternalServerError, response.ErrInternalServerError, nil)
+		v1.HandleError(ctx, http.StatusInternalServerError, v1.ErrInternalServerError, nil)
 		return
 	}
 
-	response.HandleSuccess(ctx, nil)
+	v1.HandleSuccess(ctx, nil)
 }
